--- a/Lecture_1.Rmd
+++ b/Lecture_1.Rmd
@@ -3,8 +3,8 @@ title: "Lecture 1 -- Introduction"
 author: "Martin Spindler"
 date: '`r format(Sys.Date())`'
 output:
-  beamer_presentation: default
   ioslides_presentation: null
+  beamer_presentation: default
   mathjax: local
   self_contained: no
 ---
@@ -52,27 +52,27 @@ knitr::opts_chunk$set(echo = FALSE)
 $$ \hat{Y}=\hat{f}(X) $$
 We are interested in high quality predictions and not in the function $f$ which is more or less considered as a black box.
 
-- **Inference**: Here the goal is understanding the relationship between $Y$ and $X$ and the form of $f$. Related questions are which predictors are asscoiated with the response (model selection) and is the relationship linear or nonlinear.
+- **Inference**: Here the goal is understanding the relationship between $Y$ and $X$ and the form of $f$. Related questions are which predictors are associated with the response (model selection) and is the relationship linear or nonlinear.
 
 ## Basic Concepts | Trade-off between Prediction Accuracy and Model Interpretability
 Some methods are less flexible or more restrictive, meaning that the range of shapes of $f$ they can estimate is restricted. Other methods are more flexible in this regard.  
-Usually there is a tension between prediction accuracy and interpretability. This means that flexible models often deliver good prediction accuracy and give models wich are harder to interpret.
+Usually there is a tension between prediction accuracy and interpretability. This means that flexible models often deliver good prediction accuracy and give models which are harder to interpret.
 
 This will become clearer in Part I.
 
 ## Basic Concepts | The Bias-Variance Trade-off I
-- The mean squarred error (MSE) is defined as                                                                                     
+- The mean squared error (MSE) is defined as                                                                                     
 $$ MSE = 1/n \sum_{i=1}^n (y_i - \hat{f}(x_i))^2 $$
 
-- Calculating the MSE for the sample used for estimation of $f$ (traing set) might lead to **overfitting**.
-- Hence, MSE for a new unseen sample (testing set) is preferrable:
+- Calculating the MSE for the sample used for estimation of $f$ (training set) might lead to **overfitting**.
+- Hence, MSE for a new unseen sample (testing set) is preferable:
 $$ MSE = Ave (y_0 - \hat{f}(x_0))^2 $$
 with a new observation $x_0$
 
 ## Basic Concepts | The Bias-Variance Trade-off II
 - We have the following decomposition
 $$ \mathbb{E} (y_0 - \hat{f}(x_0))^2 = \mathbb{Var}(\hat{f}(x_0)) + [Bias(\hat{f}(x_0))]^2 + \mathbb{Var}(\varepsilon) $$
-- Varinace: amount by which $\hat{f}$ changes if estimated by using a different training data set
+- Variance: amount by which $\hat{f}$ changes if estimated by using a different training data set
 - Bias: error due to approximation the real relationship by a simpler model
 - "Bias-Variance Trade-off"
 
@@ -174,7 +174,7 @@ When we observe $p$ noise variables $\varepsilon_1,\ldots,\varepsilon_p$ which a
 
 $$ \mathbb{P}(\max_{j=1,\ldots,p} |\varepsilon_j| \geq x) = 1 - (1- \mathbb{P}(|\varepsilon_1| \geq x))^p \approx p \mathbb{P}(|\varepsilon_1| \geq x).$$
 
-This means that if we want to bound the max of the absolute values wiht probability $1-\alpha$, then we can only guarantee that the maximum is smaller than $(2\log(p/\alpha))^{1/2}$.
+This means that if we want to bound the max of the absolute values with probability $1-\alpha$, then we can only guarantee that the maximum is smaller than $(2\log(p/\alpha))^{1/2}$.
 
 
 ## Computational Complexity
