--- a/Lecture_3.Rmd
+++ b/Lecture_3.Rmd
@@ -23,10 +23,10 @@ knitr::opts_chunk$set(echo = FALSE)
 ## Regression Splines
 
 * Polynomial regressions often leads to rough and instable estimates.
-* Solution: Fitting seperate low-degree polynomials over different regions (and make them smooth)
+* Solution: Fitting separate low-degree polynomials over different regions (and make them smooth)
 * Construction of splines:
-  - Partition x-axis into different smaller sub-intervals and estimate a seperate polynomial for each interval.
-  - Additionally, it is required that the combined function is smooth (e.g. continuosly differentiable) at the boundary points (knots).
+  - Partition x-axis into different smaller sub-intervals and estimate a separate polynomial for each interval.
+  - Additionally, it is required that the combined function is smooth (e.g. continuously differentiable) at the boundary points (knots).
   
 ## Regression Splines | Defintion
 
@@ -35,7 +35,7 @@ Let $a=c_1 < c_2 < \ldots < c_K=b$ be a partition of the interval $[a,b]$. A fun
 1. $s(z)$ is a polynomial of degree $l$ for $z \in [c_j, c_{j+1}), 1 \leq j < m.$
 2. $s(z)$ is $(l-1)$-times continuously differentiable.
 
-$c_1, \ldots, c_K$ are called knotes of the splines and $\Omega=\{ c_1,\ldots, c_k\}$ knot set.
+$c_1, \ldots, c_K$ are called knots of the splines and $\Omega=\{ c_1,\ldots, c_k\}$ knot set.
 
 ## Regression Splines
 
@@ -75,7 +75,7 @@ curve(f3, from=0, to=1,  xlab="", ylab="", main="Spline of degree 2, B_5")
 ## Regression Splines
 How to choose the number and location of knots?
 
-* Equi-distant knotes
+* Equi-distant knots
 * Choice according to quantiles of the x-variable 
 
 ## Regression Splines | Example
@@ -100,9 +100,9 @@ lines(age.grid, pred$fit - 2*pred$se, lty="dashed")
 
 ## Natural Splines
 
-* Problem: Regression splines tend to display erratic behvior at the boundaries of the domain leading to high variance.
+* Problem: Regression splines tend to display erratic behavior at the boundaries of the domain leading to high variance.
 * Solution: additional constraints at the boundary (left of the leftmost knot and right of the most rightmost knot)
-* Defintion **Natural Spline**  
+* Definition **Natural Spline**  
 A natural spline of degree $l$ is a regression spline of degree $l$ with the additional constraint that  
 it is a polynomial of degree $(k-1)/2$ on $(-\infty, c_0]$ and $[c_K, + \infty)$.
 * Most popular natural splines are cubic which are linear beyond the boundaries.
@@ -113,9 +113,9 @@ it is a polynomial of degree $(k-1)/2$ on $(-\infty, c_0]$ and $[c_K, + \infty)$
 * Optimization problem: Among all functions $f(x)$ with two continuous derivatives, minimize:
 $$ RSS(f, \lambda) = \sum_{i=1}^n (y_i -f(x_i))^2 + \lambda \int (f''(t))^2dt $$
 * $\lambda$ is called *smoothing parameter* (interpretation?)
-* It can be shown that the solution of the opimization problem is unique and a natural cubic spline with knots at the unique values of the $x_i, i=1,\ldots,n$.
+* It can be shown that the solution of the optimization problem is unique and a natural cubic spline with knots at the unique values of the $x_i, i=1,\ldots,n$.
 * Here: no problem how to choose the knots (as in the regression spline case)
-* Intution: Overparametrization (because of $n$ knots), but penalization
+* Intuition: Overparametrization (because of $n$ knots), but penalization
 
 ## Snoothing Splines
 
