--- a/Lecture_7.Rmd
+++ b/Lecture_7.Rmd
@@ -3,8 +3,8 @@ title: "Lecture 7 -- Neural Nets"
 author: "Martin Spindler"
 date: '`r format(Sys.Date())`'
 output:
-  beamer_presentation: default
   ioslides_presentation: null
+  beamer_presentation: default
   keep_tex: yes
   mathjax: local
   self_contained: no
@@ -65,7 +65,7 @@ Today: Neural Nets / Deep Learning
 * Analog Derivatives $\frac{\partial R_i}{\partial \alpha_{ml}}$
 
 ## Fitting Neural Networks
-A gradient descent updata at the (r+1)st iteration is given by  
+A gradient descent update at the (r+1)st iteration is given by  
 * $\beta_{km}^{(r+1)} =  \beta_{km}^{(r)} - \gamma_r \sum_{i=1}^N \frac{\partial R_i}{\partial  \beta_{km}^{(r)}}$  
 * $\alpha_{ml}^{(r+1)} =  \alpha_{ml}^{(r)} - \gamma_r \sum_{i=1}^N \frac{\partial R_i}{\partial  \alpha_{ml}^{(r)}}$  
 * $\gamma_r$ learning rate
@@ -87,8 +87,8 @@ Estimation via back-propagation equations:
 ## Neural Networks
 * Starting values: random values near zero. Intuition: model starts out nearly linear and becomes nonlinear as the weights increase.
 * Overfitting: to prevent overfitting early stopping and penalization (weight decay; $R(\theta) + \lambda J(\theta)$)
-* Scaling of the inputs: large effects on the quality of the final solution. Default: standarization and normlization of of inputs (mean zero and unit variance)
+* Scaling of the inputs: large effects on the quality of the final solution. Default: standardization and normalization of of inputs (mean zero and unit variance)
 * Number of hidden units and layers: better to have too many hidden units than too few. (Flexibility + Regularization!)
-* Multiple Minima: nonconvex crtierio function with many local minima (different starting values, average of predictions of collection of neural nets)
+* Multiple Minima: nonconvex criterion function with many local minima (different starting values, average of predictions of collection of neural nets)
 
 
