--- a/Lecture_10.Rmd
+++ b/Lecture_10.Rmd
@@ -3,8 +3,8 @@ title: "Lecture 10 -- Model Assessment and Selection"
 author: "Martin Spindler"
 date: '`r format(Sys.Date())`'
 output:
-  ioslides_presentation: null
   beamer_presentation: default
+  ioslides_presentation: null
   keep_tex: yes
   mathjax: local
   self_contained: no
@@ -42,12 +42,12 @@ $$ Err(x) = \sigma^2_{\varepsilon} + Bias^2(\hat{f}(x_0)) + Var(\hat{f}(x_0))$$
 
 ## The Bias-Variance Decomposition | Example OLS
 * For linear model fit $\hat{f}_p(x)=x^T \hat{\beta}$ with p components by ols we have
-$$ E(x_0)=E[(Y-\hat{f}_p (x) )^2|X=x_0] =\\ \sigma^2_{\varepsilon} + [f(x_0) - E\hat{f}_p(x_0)]^2 + \|h(x_0)\|^2 \sigma^2_{\varepsilon}.$$
+$$ E(x_0)=E[(Y-\hat{f}_p (x) )^2|X=x_0] = \sigma^2_{\varepsilon} + [f(x_0) - E\hat{f}_p(x_0)]^2 + \|h(x_0)\|^2 \sigma^2_{\varepsilon}.$$
 $h(x_0)=X(X^TX)^{-1} x_0$
 
 ## The Bias-Variance Decomposition | Example OLS
 * Average over all sample values $x_i$ gives:
-$$ 1/n \sum_{i=1}^n Err(x_i) =\\ = \sigma^2_{\varepsilon} + 1/n \sum_{i=1}^n [f(x_i) - E\hat{f}(x_i)]^2 +\\ \frac{p}{n} \sigma^2_{\varepsilon},$$ the in-sample error.
+$$ 1/n \sum_{i=1}^n Err(x_i) = \sigma^2_{\varepsilon} + 1/n \sum_{i=1}^n [f(x_i) - E\hat{f}(x_i)]^2 + \frac{p}{n} \sigma^2_{\varepsilon},$$ the in-sample error.
 
 ## Optimism of the Training Error Rate
 * With $\mathcal{T}=\{(x_1,y_1), \ldots, (x_n, y_n)\}$ given, the generalization error of a model $\hat{f}$ is
